@@ -1,6 +1,8 @@
 Revision history for WWW-Kickstarter
 
 1.14.0  ~~~~-~~-~~
+        - The API started returning null for location and possibly other values.
+          This was causing the construction of objects to fail.
         - ~~~
 
 1.12.0  2017-09-25
